--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,7 @@
-/*! tailwindcss v4.0.0 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.1.14 | MIT License | https://tailwindcss.com */
+@layer properties;
 @layer theme, base, components, utilities;
-@layer theme {
-  :root {
-  }
-}
+@layer theme;
 @layer base {
   *, ::after, ::before, ::backdrop, ::file-selector-button {
     box-sizing: border-box;
@@ -15,13 +13,11 @@
     line-height: 1.5;
     -webkit-text-size-adjust: 100%;
     tab-size: 4;
-    font-family: var( --default-font-family, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" );
-    font-feature-settings: var(--default-font-feature-settings, normal);
-    font-variation-settings: var( --default-font-variation-settings, normal );
+    font-family: ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+    'Noto Color Emoji';
+    font-feature-settings: normal;
+    font-variation-settings: normal;
     -webkit-tap-highlight-color: transparent;
-  }
-  body {
-    line-height: inherit;
   }
   hr {
     height: 0;
@@ -45,9 +41,10 @@
     font-weight: bolder;
   }
   code, kbd, samp, pre {
-    font-family: var( --default-mono-font-family, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace );
-    font-feature-settings: var( --default-mono-font-feature-settings, normal );
-    font-variation-settings: var( --default-mono-font-variation-settings, normal );
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
+    monospace;
+    font-feature-settings: normal;
+    font-variation-settings: normal;
     font-size: 1em;
   }
   small {
@@ -111,7 +108,14 @@
   }
   ::placeholder {
     opacity: 1;
-    color: color-mix(in oklab, currentColor 50%, transparent);
+  }
+  @supports (not (-webkit-appearance: -apple-pay-button))  or (contain-intrinsic-size: 1px) {
+    ::placeholder {
+      color: currentcolor;
+      @supports (color: color-mix(in lab, red, red)) {
+        color: color-mix(in oklab, currentcolor 50%, transparent);
+      }
+    }
   }
   textarea {
     resize: vertical;
@@ -131,6 +135,9 @@
   }
   ::-webkit-datetime-edit, ::-webkit-datetime-edit-year-field, ::-webkit-datetime-edit-month-field, ::-webkit-datetime-edit-day-field, ::-webkit-datetime-edit-hour-field, ::-webkit-datetime-edit-minute-field, ::-webkit-datetime-edit-second-field, ::-webkit-datetime-edit-millisecond-field, ::-webkit-datetime-edit-meridiem-field {
     padding-block: 0;
+  }
+  ::-webkit-calendar-picker-indicator {
+    line-height: 1;
   }
   :-moz-ui-invalid {
     box-shadow: none;
@@ -267,13 +274,13 @@
     border-width: 1px;
   }
   .border-gray-200 {
-    border-color: oklch(0.928 0.006 264.531);
+    border-color: oklch(92.8% 0.006 264.531);
   }
   .border-gray-300 {
-    border-color: oklch(0.872 0.01 258.338);
+    border-color: oklch(87.2% 0.01 258.338);
   }
   .bg-gray-50 {
-    background-color: oklch(0.985 0.002 247.839);
+    background-color: oklch(98.5% 0.002 247.839);
   }
   .bg-white {
     background-color: #fff;
@@ -347,16 +354,16 @@
     color: #000;
   }
   .text-gray-500 {
-    color: oklch(0.551 0.027 264.364);
+    color: oklch(55.1% 0.027 264.364);
   }
   .text-gray-600 {
-    color: oklch(0.446 0.03 256.802);
+    color: oklch(44.6% 0.03 256.802);
   }
   .text-gray-800 {
-    color: oklch(0.278 0.033 256.848);
+    color: oklch(27.8% 0.033 256.848);
   }
   .text-gray-900 {
-    color: oklch(0.21 0.034 264.665);
+    color: oklch(21% 0.034 264.665);
   }
   .antialiased {
     -webkit-font-smoothing: antialiased;
@@ -364,7 +371,7 @@
   }
   .placeholder-gray-400 {
     &::placeholder {
-      color: oklch(0.707 0.022 261.325);
+      color: oklch(70.7% 0.022 261.325);
     }
   }
   .opacity-75 {
@@ -379,12 +386,15 @@
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-gray-300 {
-    --tw-shadow-color: oklch(0.872 0.01 258.338);
+    --tw-shadow-color: oklch(87.2% 0.01 258.338);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, oklch(87.2% 0.01 258.338) var(--tw-shadow-alpha), transparent);
+    }
   }
   .hover\:bg-gray-100 {
     &:hover {
       @media (hover: hover) {
-        background-color: oklch(0.967 0.003 264.542);
+        background-color: oklch(96.7% 0.003 264.542);
       }
     }
   }
@@ -398,40 +408,41 @@
   .hover\:text-gray-600 {
     &:hover {
       @media (hover: hover) {
-        color: oklch(0.446 0.03 256.802);
+        color: oklch(44.6% 0.03 256.802);
       }
     }
   }
   .hover\:text-gray-700 {
     &:hover {
       @media (hover: hover) {
-        color: oklch(0.373 0.034 259.733);
+        color: oklch(37.3% 0.034 259.733);
       }
     }
   }
   .focus\:border-sky-300 {
     &:focus {
-      border-color: oklch(0.828 0.111 230.318);
+      border-color: oklch(82.8% 0.111 230.318);
     }
   }
   .focus\:bg-gray-100 {
     &:focus {
-      background-color: oklch(0.967 0.003 264.542);
+      background-color: oklch(96.7% 0.003 264.542);
     }
   }
   .focus\:ring-3 {
     &:focus {
-      --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
+      --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
       box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     }
   }
   .focus\:ring-sky-100 {
     &:focus {
-      --tw-ring-color: oklch(0.951 0.026 236.824);
+      --tw-ring-color: oklch(95.1% 0.026 236.824);
     }
   }
   .focus\:outline-hidden {
     &:focus {
+      --tw-outline-style: none;
       outline-style: none;
       @media (forced-colors: active) {
         outline: 2px solid transparent;
@@ -522,7 +533,7 @@
   h1 > a, h2 > a, h3 > a, h4 > a, h5 > a, h6 > a {
     --tw-font-weight: 500;
     font-weight: 500;
-    color: oklch(0.21 0.034 264.665);
+    color: oklch(21% 0.034 264.665);
   }
   h1 {
     font-size: 1.5rem;
@@ -537,10 +548,10 @@
     line-height: var(--tw-leading, calc(1.75 / 1.125));
   }
   a {
-    color: oklch(0.623 0.214 259.815);
+    color: oklch(62.3% 0.214 259.815);
     &:hover {
       @media (hover: hover) {
-        color: oklch(0.488 0.243 264.376);
+        color: oklch(48.8% 0.243 264.376);
       }
     }
   }
@@ -552,7 +563,7 @@
   }
   code {
     border-radius: 0.25rem;
-    background-color: color-mix(in oklab, oklch(0.551 0.027 264.364) 8%, transparent);
+    background-color: color-mix(in oklab, oklch(55.1% 0.027 264.364) 8%, transparent);
     padding-inline: calc(0.25rem * 1);
     padding-block: calc(0.25rem * 0.5);
   }
@@ -563,7 +574,7 @@
     margin-block: calc(0.25rem * 4);
     border-left-style: var(--tw-border-style);
     border-left-width: 2px;
-    border-color: oklch(0.872 0.01 258.338);
+    border-color: oklch(87.2% 0.01 258.338);
     padding-left: calc(0.25rem * 2);
   }
 }
@@ -575,58 +586,6 @@
   width: 100%;
   table-layout: auto;
   text-align: left;
-}
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-@keyframes ping {
-  75%, 100% {
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-@keyframes pulse {
-  50% {
-    opacity: 0.5;
-  }
-}
-@keyframes bounce {
-  0%, 100% {
-    transform: translateY(-25%);
-    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
-  }
-  50% {
-    transform: none;
-    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
-  }
-}
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-@keyframes ping {
-  75%, 100% {
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-@keyframes pulse {
-  50% {
-    opacity: 0.5;
-  }
-}
-@keyframes bounce {
-  0%, 100% {
-    transform: translateY(-25%);
-    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
-  }
-  50% {
-    transform: none;
-    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
-  }
 }
 @property --tw-border-style {
   syntax: "*";
@@ -650,6 +609,11 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-shadow-alpha {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
 @property --tw-inset-shadow {
   syntax: "*";
   inherits: false;
@@ -658,6 +622,11 @@
 @property --tw-inset-shadow-color {
   syntax: "*";
   inherits: false;
+}
+@property --tw-inset-shadow-alpha {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
 }
 @property --tw-ring-color {
   syntax: "*";
@@ -695,4 +664,27 @@
   syntax: "*";
   inherits: false;
   initial-value: 0 0 #0000;
+}
+@layer properties {
+  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
+    *, ::before, ::after, ::backdrop {
+      --tw-border-style: solid;
+      --tw-leading: initial;
+      --tw-font-weight: initial;
+      --tw-shadow: 0 0 #0000;
+      --tw-shadow-color: initial;
+      --tw-shadow-alpha: 100%;
+      --tw-inset-shadow: 0 0 #0000;
+      --tw-inset-shadow-color: initial;
+      --tw-inset-shadow-alpha: 100%;
+      --tw-ring-color: initial;
+      --tw-ring-shadow: 0 0 #0000;
+      --tw-inset-ring-color: initial;
+      --tw-inset-ring-shadow: 0 0 #0000;
+      --tw-ring-inset: initial;
+      --tw-ring-offset-width: 0px;
+      --tw-ring-offset-color: #fff;
+      --tw-ring-offset-shadow: 0 0 #0000;
+    }
+  }
 }
